--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
